# kicad-stencil3dp

./: .gitignore  Makefile  README.md  gen_stl.scad  install.py  pyproject.toml
presets/: Bambu Lab A1 0.2 nozzle.bbscfg
sample/: 4servoboard-F_Paste.dxf
stencil3dp/: __init__.py  dialog.py  dxf_exporter.py  openscad_runner.py  plugin.py  scad_generator.py
